     printer may or may not function correctly, and is not likely to
     be properly tuned.

  11) Initial support for Canon S200, SELPHY CP-510 and SELPHY CP-710;
     Sony UP-DR150, and Olympus P-11 has been added.

  12) The Canon PIXMA iP4000 printers can now print to cds.  Duplex
     printing with binding on the short side is now supported, too.

  13) New "transposed" resolutions (1440x720 and 2880x1440) have been
     added for some Epson printers.  These resolutions are actually
     equivalent to 720x1440 and 1440x2880 DPI respectively.  In some
     cases these may yield better results (specifically, less
     microbanding) than the normal 1440x720 and 2880x1440 DPI
     resolutions.

  14) Quadtone printing now works correctly regardless of whether
     color or grayscale mode is selected.


================================================================

Overall changes between Gimp-Print 4.2 and Gutenprint 5.0:

* General User-Visible Changes:

  1) In general, Gutenprint 5.0 is very different from Gimp-Print 4.2.
     Gutenprint 5.0 offers many new options (which are described
     separately below), and many options that are present in both 4.2
     and 5.0 function differently in the two releases.  In addition,
     the API is different.  Finally, the color correction is quite
     different, and profiles created with the 4.2 driver will not
     function well with the 5.0 driver.

  2) Options in the CUPS driver and GIMP plugin are now grouped
     according to function.  This work is still in progress, and
     we expect to make further usability improvements.

  3) Simplified bundles of settings are now offered for users who do
     not need to customize the settings.  The Print Quality and Image
     Type controls offer a variety of settings optimized for common
     printing tasks.  Both controls offer Manual Control settings for
     users who wish greater control over the output.
