@@ -137,14 +137,24 @@ These release notes contain the following sections:
   12) The Canon PIXMA iP4000 printers can now print to cds.  Duplex
      printing with binding on the short side is now supported, too.
 
-  13) New "transposed" resolutions (1440x720 and 2880x1440) have been
+  13) The Epson Stylus Photo R200 and related printers have been
+     retuned to give improved detail in the shadows, reduced ink
+     usage, more accurate grayscale, and more accurate colors.
+     Affected printers are the R200, R210, R220, R300, R310, R320,
+     R340, RX400, RX420, RX425, RX430, RX500, RX510, RX600, RX620,
+     RX630, PM-D750, PM-D770, PM-G700, and, PM-G720.
+
+     Any profiles generated against these printers will have to be
+     re-created.
+
+  14) New "transposed" resolutions (1440x720 and 2880x1440) have been
      added for some Epson printers.  These resolutions are actually
      equivalent to 720x1440 and 1440x2880 DPI respectively.  In some
      cases these may yield better results (specifically, less
      microbanding) than the normal 1440x720 and 2880x1440 DPI
      resolutions.
 
-  14) Quadtone printing now works correctly regardless of whether
+  15) Quadtone printing now works correctly regardless of whether
      color or grayscale mode is selected.
 
 
